# voom-v2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  FABLE_AUDIT.md  README.md  deny.toml  justfile  rustfmt.toml  sonar-project.properties
crates/voom-api/: Cargo.toml
crates/voom-api/src/: execution.rs  execution_test.rs  lib.rs  lib_test.rs
crates/voom-api/tests/: health_route.rs  remote_execution_route.rs
crates/voom-artifact/: Cargo.toml
crates/voom-artifact/src/: commit_pipeline.rs  lib.rs
crates/voom-cli/: Cargo.toml  build.rs
crates/voom-cli/src/: cli.rs  envelope.rs  envelope_test.rs  lib.rs  logging.rs  main.rs
crates/voom-cli/tests/: artifact_envelope.rs  backup_envelope.rs  bad_args_envelope.rs  build_script.rs  bundle_envelope.rs  chaos_librarian_e2e.rs  compliance_envelope.rs  external_system_envelope.rs  global_flags_envelope.rs  health_envelope.rs  init_envelope.rs  inspection_envelope.rs  issue_envelope.rs  lease_commit_gate_e2e.rs  lease_envelope.rs  library_envelope.rs  log_format_env_override.rs  multi_phase_flow.rs  multi_phase_preview_envelope.rs  node_envelope.rs  operator_execution_e2e.rs  plan_envelope.rs  policy_envelope.rs  profile_envelope.rs  run_local_stdout_contract.rs  safety_policy_envelope.rs  scan_envelope.rs  scheduler_envelope.rs  scheduling_policy_envelope.rs  scoring_profile_envelope.rs  version_envelope.rs  worker_envelope.rs
crates/voom-conformance/: Cargo.toml  voom-fakes-manifest.toml
crates/voom-conformance/src/: failure_taxonomy.rs  failure_taxonomy_test.rs  harness.rs  harness_test.rs  lib.rs  manifest.rs  manifest_test.rs  negative_fixture.rs  negative_fixture_test.rs  raw_wire_suite.rs  raw_wire_suite_test.rs  typed_suite.rs  typed_suite_test.rs
crates/voom-conformance/tests/: conformance_all.rs  echo_worker.rs
crates/voom-control-plane/: Cargo.toml
crates/voom-control-plane/src/: backup.rs  backup_test.rs  lib.rs  lib_test.rs  local_worker.rs  local_worker_test.rs  media_snapshot.rs  media_snapshot_test.rs  node_auth.rs  node_auth_test.rs  operation_source.rs  worker_process.rs
crates/voom-control-plane/tests/: audio_extract_flow.rs  audio_transcode_flow.rs  benchmark.rs  commit_use_lease_gate.rs  compliance_execute.rs  durable_workflow.rs  local_worker_lifecycle.rs  phase_barrier_combined_flow.rs  phase_barrier_flow.rs  recover_commit_gate.rs  remux_flow.rs  sample_policies_plan.rs  sample_policy_plan.rs  staged_artifact_flow.rs  video_profile_flow.rs  video_transcode_flow.rs
crates/voom-core/: Cargo.toml
crates/voom-core/src/: clock.rs  clock_test.rs  clock_test_support.rs  clock_test_support_test.rs  config.rs  error.rs  error_test.rs  failure.rs  failure_test.rs  ids.rs  ids_test.rs  issue.rs  issue_test.rs  lib.rs  remux.rs  rng_test_support.rs  ticket_operation.rs  version.rs  version_test.rs
crates/voom-events/: Cargo.toml
crates/voom-events/src/: assertion.rs  assertion_test.rs  envelope.rs  envelope_test.rs  kind.rs  kind_test.rs  lib.rs  payload.rs  payload_test.rs  subject.rs  subject_test.rs
crates/voom-fake-support/: Cargo.toml
crates/voom-fake-support/src/: catalog.rs  lib.rs  lib_test.rs  results.rs  runtime.rs  scenario.rs  streaming.rs  validation.rs
crates/voom-fakes/: Cargo.toml
crates/voom-fakes/src/: lib.rs  remote_runner.rs  remote_runner_test.rs
crates/voom-fakes/tests/: benchmark_worker.rs  chaos_worker.rs  fake_providers.rs
crates/voom-ffmpeg-worker/: Cargo.toml
crates/voom-ffmpeg-worker/src/: ffmpeg.rs  ffmpeg_test.rs  handler.rs  handler_test.rs  lib.rs  main.rs  main_test.rs  observe.rs  observe_test.rs  preflight.rs  preflight_test.rs
crates/voom-ffmpeg-worker/tests/: transcode_conformance.rs  transcode_worker.rs
crates/voom-mkvtoolnix-worker/: Cargo.toml
crates/voom-mkvtoolnix-worker/src/: handler.rs  handler_test.rs  lib.rs  main.rs  main_test.rs  mkvmerge.rs  mkvmerge_test.rs  observe.rs  observe_test.rs  preflight.rs  preflight_test.rs
crates/voom-plan/: Cargo.toml
crates/voom-plan/src/: audio.rs  audio_test.rs  compliance_hash.rs  compliance_model.rs  compliance_model_test.rs  compliance_report.rs  compliance_report_test.rs  diagnostic.rs  diagnostic_test.rs  fixtures.rs  fixtures_test.rs  hash.rs  hash_test.rs  lib.rs  model.rs  model_test.rs  planner.rs  planner_test.rs  remux.rs  remux_test.rs  transcode_video_profile.rs  transcode_video_profile_test.rs
crates/voom-policy/: Cargo.toml
crates/voom-policy/fixtures/: synthetic_compliant_baseline.json  synthetic_noncompliant_transcode_needed.json
crates/voom-policy/src/: ast.rs  ast_test.rs  compiled.rs  compiled_test.rs  diagnostic.rs  diagnostic_test.rs  fixtures.rs  fixtures_test.rs  lib.rs  model.rs  model_test.rs  parser.rs  parser_test.rs  pipeline.rs  pipeline_test.rs  policy_fixtures.rs  policy_fixtures_test.rs  span_test.rs  validate.rs  validate_test.rs  video_profile.rs  video_profile_test.rs
crates/voom-store/: Cargo.toml
crates/voom-store/src/: init.rs  init_test.rs  lib.rs  migrator.rs  pool.rs  pool_test.rs  schema.rs  schema_test.rs  test_support.rs
crates/voom-store/tests/: acquire_rejects_retired_worker.rs  commit_safety_gate.rs  commit_safety_gate_abort.rs  commit_safety_gate_after_rename.rs  commit_safety_gate_force_path.rs  commit_safety_gate_pending_lock.rs  commit_safety_gate_recovery_required.rs  disk_mode.rs  event_log_append_only.rs  health_no_migrate.rs  ingest_identity_invariants.rs  init.rs  lease_expire_and_recover.rs  migration_inventory.rs  rename_reconciliation.rs  repo_roundtrip.rs  ticket_dependency_unlock.rs  ticket_lease_lifecycle.rs  use_lease_lifecycle.rs
crates/voom-test-support/: Cargo.toml
crates/voom-test-support/src/: lib.rs  worker.rs  worker_test.rs
crates/voom-worker-protocol/: Cargo.toml
crates/voom-worker-protocol/src/: credentials.rs  encoder_caps.rs  encoder_caps_test.rs  envelope.rs  envelope_test.rs  handshake.rs  handshake_test.rs  http.rs  http_test.rs  lib.rs  ndjson.rs  ndjson_test.rs  operation_kind.rs  operation_kind_test.rs  probe_file.rs  remux.rs  remux_test.rs  startup.rs  (+5 more)
(+906 files in other folders)
