[workspace]
resolver = "3"
members = [
    "crates/voom-core",
    "crates/voom-store",
    "crates/voom-events",
    "crates/voom-policy",
    "crates/voom-plan",
    "crates/voom-scheduler",
    "crates/voom-artifact",
    "crates/voom-worker-protocol",
    "crates/voom-control-plane",
    "crates/voom-api",
    "crates/voom-cli",
    "crates/voom-conformance",
    "crates/voom-test-support",
    "crates/voom-fake-support",
    "crates/voom-fakes",
    "crates/voom-ffprobe-worker",
    "crates/voom-ffmpeg-worker",
    "crates/voom-mkvtoolnix-worker",
    "crates/voom-verify-artifact-worker",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["VOOM contributors"]
repository = "https://github.com/randomparity/voom-v2"

[workspace.dependencies]
# Pinned at the workspace level; member crates use `{ workspace = true }`.
# All versions resolved by `cargo add` at implementation time.

# Internal crates.
voom-core = { version = "0.1.0-dev", path = "crates/voom-core" }
voom-events = { version = "0.1.0-dev", path = "crates/voom-events" }
voom-plan = { version = "0.1.0-dev", path = "crates/voom-plan" }
voom-policy = { version = "0.1.0-dev", path = "crates/voom-policy" }
voom-store = { version = "0.1.0-dev", path = "crates/voom-store" }
voom-control-plane = { version = "0.1.0-dev", path = "crates/voom-control-plane" }
voom-api = { version = "0.1.0-dev", path = "crates/voom-api" }
voom-worker-protocol = { version = "0.1.0-dev", path = "crates/voom-worker-protocol" }
voom-conformance = { version = "0.1.0-dev", path = "crates/voom-conformance" }
voom-test-support = { version = "0.1.0-dev", path = "crates/voom-test-support" }
voom-fake-support = { version = "0.1.0-dev", path = "crates/voom-fake-support" }
voom-ffmpeg-worker = { version = "0.1.0-dev", path = "crates/voom-ffmpeg-worker" }
voom-mkvtoolnix-worker = { version = "0.1.0-dev", path = "crates/voom-mkvtoolnix-worker" }

# Shared third-party crates. Workspace declarations carry the union of
# features common to every consumer; member crates add crate-specific
# features via `{ workspace = true, features = ["..."] }`.
base64 = "0.22.1"
hex = "0.4.3"
rand = { version = "0.9.4", default-features = false, features = ["os_rng", "std", "std_rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
sha2 = "0.11.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
tempfile = "3.27.0"
time = { version = "0.3.45", features = ["formatting"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"

# Sprint 2 Phase 1 (worker protocol + conformance) deps.
async-trait = "0.1.83"
blake3 = "1.5"
bytes = "1.7"
chrono = { version = "0.4.39", features = ["serde"] }
constant_time_eq = "0.4.2"
http = "1.1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1.5", features = ["http1", "client", "server"] }
hyper-util = { version = "0.1.10", features = ["client-legacy", "tokio", "server", "server-auto", "http1"] }
libc = "0.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
secrecy = "0.10"
thiserror = "2"
toml = "1.1"
tokio-util = { version = "0.7.13", features = ["io"] }
trybuild = "1.0.108"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Panic prevention
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
# No cheating
allow_attributes = "deny"
# Code hygiene
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Safety
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
# Pedantic relaxations (too noisy)
module_name_repetitions = "allow"
similar_names = "allow"
# Doc-completeness pedantic lints — Sprint 0 prioritizes shipping working
# code over exhaustive # Errors / # Panics docs on every fallible function.
# Re-enable in a documentation-hardening sprint.
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
warnings = { level = "deny", priority = -1 }
unsafe_code = "forbid"
missing_debug_implementations = "deny"
