[package]
name = "voom-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tower = "0.5.3"
voom-control-plane = { version = "0.1.0-dev", path = "../voom-control-plane" }
voom-core = { version = "0.1.0-dev", path = "../voom-core" }

[dev-dependencies]
http-body-util = "0.1.3"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5.3", features = ["util"] }
voom-store = { version = "0.1.0-dev", path = "../voom-store" }
