[package]
name = "voom-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
axum = "0.8.9"
serde = { workspace = true }
serde_json = { workspace = true }
tower = "0.5.3"
voom-control-plane = { workspace = true }
voom-core = { workspace = true }

[dev-dependencies]
http-body-util = "0.1.3"
sqlx = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tower = { version = "0.5.3", features = ["util"] }
voom-store = { workspace = true, features = ["test-support"] }
