[package]
name = "voom-artifact"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sqlx = { workspace = true }
time = { workspace = true }
voom-core = { workspace = true }
voom-events = { workspace = true }
voom-store = { workspace = true }
