[package]
name = "voom-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "voom_cli"
path = "src/lib.rs"

[[bin]]
name = "voom"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.45", features = ["serde", "formatting"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "fmt"] }
voom-control-plane = { version = "0.1.0-dev", path = "../voom-control-plane" }
voom-core = { version = "0.1.0-dev", path = "../voom-core" }
voom-store = { version = "0.1.0-dev", path = "../voom-store" }

[dev-dependencies]
insta = { version = "1.47.2", features = ["json"] }
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
voom-store = { version = "0.1.0-dev", path = "../voom-store" }
