[package]
name = "voom-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "voom_cli"
path = "src/lib.rs"

[[bin]]
name = "voom"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "fmt"] }
voom-control-plane = { workspace = true }
voom-core = { workspace = true }
voom-plan = { workspace = true }
voom-policy = { workspace = true }
voom-store = { workspace = true }

[dev-dependencies]
insta = { version = "1.47.2", features = ["json"] }
hex = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
voom-store = { workspace = true, features = ["test-support"] }
