[package]
name = "voom-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
voom-core.workspace = true
voom-worker-protocol.workspace = true

bytes.workspace = true
chrono.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "process", "sync", "time"] }

[[bin]]
name = "echo-worker"
path = "src/bin/echo_worker.rs"

[lints]
workspace = true
