[package]
name = "voom-control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
voom-core = { workspace = true }
voom-events = { workspace = true }
voom-store = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
