[package]
name = "voom-control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Test-only public surface: re-exposes the writable repo accessors so the
# voom-store integration suite can drive state changes that don't have a
# dedicated case handler (e.g. ticket_dependencies setup). Never enable in
# production binaries — those callers must go through the case-handler
# layer so every durable state change pairs with EventRepo::append_in_tx.
test-support = ["voom-store/test-support"]

[dependencies]
rand = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
voom-core = { workspace = true }
voom-events = { workspace = true }
voom-store = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
