[package]
name = "voom-control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Test-only public surface: re-exposes the writable repo accessors so the
# voom-store integration suite can drive state changes that don't have a
# dedicated case handler (e.g. ticket_dependencies setup). Never enable in
# production binaries — those callers must go through the case-handler
# layer so every durable state change pairs with EventRepo::append_in_tx.
test = ["voom-store/test"]

[dependencies]
base64 = { workspace = true }
blake3 = { workspace = true }
async-trait = { workspace = true }
constant_time_eq = { workspace = true }
hex = { workspace = true }
libc = { workspace = true }
rand = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "process", "rt", "sync", "time"] }
tracing = { workspace = true }
voom-artifact = { workspace = true }
voom-core = { workspace = true }
voom-events = { workspace = true }
voom-plan = { workspace = true }
voom-policy = { workspace = true }
voom-scheduler = { workspace = true }
voom-store = { workspace = true }
voom-worker-protocol = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-util", "process", "time", "test-util"] }
# FrozenRng/SeededRng from voom-core::rng_test_support, used by lease
# case tests to pin the backoff jitter.
voom-core = { workspace = true, features = ["test"] }
voom-fake-support = { workspace = true }
voom-ffmpeg-worker = { workspace = true }
voom-test-support = { workspace = true }
