[package]
name = "voom-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
test-support = []

[dependencies]
directories = "6.0.0"
serde = { workspace = true }
thiserror = "2.0.18"
time = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde_json = { workspace = true }
