[package]
name = "voom-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
voom-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["serde", "macros", "parsing"] }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
