[package]
name = "voom-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "time"] }
time = { version = "0.3.45", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync"] }
voom-core = { workspace = true }

[features]
# Test-only public surface: enables init_on(pool), the test_support module
# (sqlite_url_for, fresh_initialized_pool_at, insert_synthetic_migration),
# and any other pool-injection helpers needed by tests that want to seed
# pre-init state. Production crates MUST NOT enable this.
#
# The test_support module deliberately does NOT depend on tempfile — callers
# pass &Path in so that enabling this feature doesn't propagate tempfile's
# transitive graph into production builds.
test-support = []

[dev-dependencies]
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
