[package]
name = "voom-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde_json = { workspace = true }
voom-control-plane = { workspace = true }
voom-core = { workspace = true }
voom-store = { workspace = true }

[lints]
workspace = true
